tests/integration/update_cluster/gossip-azure/kubernetes.tf
locals {
  cluster_name = "gossip.k8s.local"
  region       = "eastus"
}

output "cluster_name" {
  value = "gossip.k8s.local"
}

output "region" {
  value = "eastus"
}

provider "azurerm" {
  features {
  }
  subscription_id = "sub-123"
}

provider "azurerm" {
  alias = "files"
  features {
  }
  subscription_id = "sub-321"
}

resource "azurerm_application_security_group" "control-plane-gossip-k8s-local" {
  location            = "eastus"
  name                = "control-plane.gossip.k8s.local"
  resource_group_name = azurerm_resource_group.gossip-k8s-local.name
  tags = {
    "KubernetesCluster" = "test-cluster.k8s"
  }
}

resource "azurerm_application_security_group" "nodes-gossip-k8s-local" {
  location            = "eastus"
  name                = "nodes.gossip.k8s.local"
  resource_group_name = azurerm_resource_group.gossip-k8s-local.name
  tags = {
    "KubernetesCluster" = "test-cluster.k8s"
  }
}

resource "azurerm_lb" "api-gossip-k8s-local" {
  frontend_ip_configuration {
    name                 = "LoadBalancerFrontEnd"
    public_ip_address_id = azurerm_public_ip.api-gossip-k8s-local.id
  }
  location            = "eastus"
  name                = "api-gossip.k8s.local"
  resource_group_name = azurerm_resource_group.gossip-k8s-local.name
  sku                 = "Standard"
  tags = {
    "KubernetesCluster" = "test-cluster.k8s"
  }
}

resource "azurerm_lb_backend_address_pool" "api-gossip-k8s-local-backend-pool" {
  loadbalancer_id = azurerm_lb.api-gossip-k8s-local.id
  name            = "LoadBalancerBackEnd"
}

resource "azurerm_lb_probe" "api-gossip-k8s-local-Health-HTTPS-3988" {
  interval_in_seconds = 15
  loadbalancer_id     = azurerm_lb.api-gossip-k8s-local.id
  name                = "Health-HTTPS-3988"
  number_of_probes    = 4
  port                = 3988
  protocol            = "Https"
  request_path        = "/healthz"
}

resource "azurerm_lb_probe" "api-gossip-k8s-local-Health-TCP-443" {
  interval_in_seconds = 15
  loadbalancer_id     = azurerm_lb.api-gossip-k8s-local.id
  name                = "Health-TCP-443"
  number_of_probes    = 4
  port                = 443
  protocol            = "Tcp"
}

resource "azurerm_lb_rule" "api-gossip-k8s-local-TCP-3988" {
  backend_address_pool_ids       = [azurerm_lb_backend_address_pool.api-gossip-k8s-local-backend-pool.id]
  backend_port                   = 3988
  floating_ip_enabled            = false
  frontend_ip_configuration_name = "LoadBalancerFrontEnd"
  frontend_port                  = 3988
  idle_timeout_in_minutes        = 4
  load_distribution              = "Default"
  loadbalancer_id                = azurerm_lb.api-gossip-k8s-local.id
  name                           = "TCP-3988"
  probe_id                       = azurerm_lb_probe.api-gossip-k8s-local-Health-HTTPS-3988.id
  protocol                       = "Tcp"
}

resource "azurerm_lb_rule" "api-gossip-k8s-local-TCP-443" {
  backend_address_pool_ids       = [azurerm_lb_backend_address_pool.api-gossip-k8s-local-backend-pool.id]
  backend_port                   = 443
  floating_ip_enabled            = false
  frontend_ip_configuration_name = "LoadBalancerFrontEnd"
  frontend_port                  = 443
  idle_timeout_in_minutes        = 4
  load_distribution              = "Default"
  loadbalancer_id                = azurerm_lb.api-gossip-k8s-local.id
  name                           = "TCP-443"
  probe_id                       = azurerm_lb_probe.api-gossip-k8s-local-Health-TCP-443.id
  protocol                       = "Tcp"
}

resource "azurerm_linux_virtual_machine_scale_set" "control-plane-eastus-1-masters-gossip-k8s-local" {
  admin_ssh_key {
    public_key = "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDbY5rS+D/y2tqFq1aaugISaPcuMUIDiS76GjAI0dz08d7D5iy+LgWjhSqiZPGzObLdO6BNlKSHxYlZQBu7bxsyojQtk5F8Tjkdpgfpi9E+GD4Hl8UU8aQc1t0vK2KP/J2u2ZVc+AKISSdGQoQ95m2CYcQ6iLShzI+H25PJEEaIRAacWhmiNoo4Dku1wnlPS34Etudtro07uvLWHcD5rihlQ48VUWJr4in3ejeGzHTS5iOa1PQgddzd4uT2kd6m4rYa2NI0Ar7CJH772lYG5SF7cZgaV3bHkRNiRgMaj52bhyd0lfhioaJIaehk+IdcCaIO0EVJxr+Dnwt97oEKNOqT chacman@M1Book.local"
    username   = "kops"
  }
  admin_username                  = "kops"
  computer_name_prefix            = "control-plane-eastus-1"
  disable_password_authentication = true
  identity {
    type = "SystemAssigned"
  }
  instances = 1
  location  = "eastus"
  name      = "control-plane-eastus-1.masters.gossip.k8s.local"
  network_interface {
    enable_ip_forwarding = true
    ip_configuration {
      application_security_group_ids         = [azurerm_application_security_group.control-plane-gossip-k8s-local.id]
      load_balancer_backend_address_pool_ids = [azurerm_lb_backend_address_pool.api-gossip-k8s-local-backend-pool.id]
      name                                   = "control-plane-eastus-1.masters.gossip.k8s.local"
      primary                                = true
      public_ip_address {
        name    = "control-plane-eastus-1.masters.gossip.k8s.local"
        version = "IPv4"
      }
      subnet_id = azurerm_subnet.gossip-k8s-local.id
    }
    name    = "control-plane-eastus-1.masters.gossip.k8s.local"
    primary = true
  }
  os_disk {
    caching              = "ReadWrite"
    disk_size_gb         = 64
    storage_account_type = "StandardSSD_LRS"
  }
  resource_group_name = azurerm_resource_group.gossip-k8s-local.name
  sku                 = "Standard_B2s"
  source_image_reference {
    offer     = "UbuntuServer"
    publisher = "Canonical"
    sku       = "18.04-LTS"
    version   = "latest"
  }
  tags = {
    "KubernetesCluster"         = "test-cluster.k8s"
    "k8s.io_role_control-plane" = "1"
    "k8s.io_role_master"        = "1"
    "kops.k8s.io_instancegroup" = "control-plane-eastus-1"
  }
  upgrade_mode = "Manual"
  user_data    = filebase64("${path.module}/data/azurerm_linux_virtual_machine_scale_set_control-plane-eastus-1.masters.gossip.k8s.local_user_data")
  zones        = ["1"]
}

resource "azurerm_linux_virtual_machine_scale_set" "nodes-eastus-1-gossip-k8s-local" {
  admin_ssh_key {
    public_key = "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDbY5rS+D/y2tqFq1aaugISaPcuMUIDiS76GjAI0dz08d7D5iy+LgWjhSqiZPGzObLdO6BNlKSHxYlZQBu7bxsyojQtk5F8Tjkdpgfpi9E+GD4Hl8UU8aQc1t0vK2KP/J2u2ZVc+AKISSdGQoQ95m2CYcQ6iLShzI+H25PJEEaIRAacWhmiNoo4Dku1wnlPS34Etudtro07uvLWHcD5rihlQ48VUWJr4in3ejeGzHTS5iOa1PQgddzd4uT2kd6m4rYa2NI0Ar7CJH772lYG5SF7cZgaV3bHkRNiRgMaj52bhyd0lfhioaJIaehk+IdcCaIO0EVJxr+Dnwt97oEKNOqT chacman@M1Book.local"
    username   = "kops"
  }
  admin_username                  = "kops"
  computer_name_prefix            = "nodes-eastus-1"
  disable_password_authentication = true
  identity {
    type = "SystemAssigned"
  }
  instances = 1
  location  = "eastus"
  name      = "nodes-eastus-1.gossip.k8s.local"
  network_interface {
    enable_ip_forwarding = true
    ip_configuration {
      application_security_group_ids = [azurerm_application_security_group.nodes-gossip-k8s-local.id]
      name                           = "nodes-eastus-1.gossip.k8s.local"
      primary                        = true
      public_ip_address {
        name    = "nodes-eastus-1.gossip.k8s.local"
        version = "IPv4"
      }
      subnet_id = azurerm_subnet.gossip-k8s-local.id
    }
    name    = "nodes-eastus-1.gossip.k8s.local"
    primary = true
  }
  os_disk {
    caching              = "ReadWrite"
    disk_size_gb         = 128
    storage_account_type = "StandardSSD_LRS"
  }
  resource_group_name = azurerm_resource_group.gossip-k8s-local.name
  sku                 = "Standard_B2s"
  source_image_reference {
    offer     = "UbuntuServer"
    publisher = "Canonical"
    sku       = "18.04-LTS"
    version   = "latest"
  }
  tags = {
    "KubernetesCluster"         = "test-cluster.k8s"
    "k8s.io_role_node"          = "1"
    "kops.k8s.io_instancegroup" = "nodes-eastus-1"
  }
  upgrade_mode = "Manual"
  user_data    = filebase64("${path.module}/data/azurerm_linux_virtual_machine_scale_set_nodes-eastus-1.gossip.k8s.local_user_data")
  zones        = ["1"]
}

resource "azurerm_managed_disk" "etcd-1-etcd-events-gossip-k8s-local" {
  create_option        = "Empty"
  disk_size_gb         = 20
  location             = "eastus"
  name                 = "etcd-1.etcd-events.gossip.k8s.local"
  resource_group_name  = azurerm_resource_group.gossip-k8s-local.name
  storage_account_type = "StandardSSD_LRS"
  tags = {
    "KubernetesCluster"                      = "test-cluster.k8s"
    "k8s.io_etcd_events"                     = "etcd-1/etcd-1"
    "k8s.io_role_control-plane"              = "1"
    "k8s.io_role_master"                     = "1"
    "kubernetes.io_cluster_gossip.k8s.local" = "owned"
  }
  zone = "1"
}

resource "azurerm_managed_disk" "etcd-1-etcd-main-gossip-k8s-local" {
  create_option        = "Empty"
  disk_size_gb         = 20
  location             = "eastus"
  name                 = "etcd-1.etcd-main.gossip.k8s.local"
  resource_group_name  = azurerm_resource_group.gossip-k8s-local.name
  storage_account_type = "StandardSSD_LRS"
  tags = {
    "KubernetesCluster"                      = "test-cluster.k8s"
    "k8s.io_etcd_main"                       = "etcd-1/etcd-1"
    "k8s.io_role_control-plane"              = "1"
    "k8s.io_role_master"                     = "1"
    "kubernetes.io_cluster_gossip.k8s.local" = "owned"
  }
  zone = "1"
}

resource "azurerm_nat_gateway" "gossip-k8s-local" {
  location            = "eastus"
  name                = "gossip.k8s.local"
  resource_group_name = azurerm_resource_group.gossip-k8s-local.name
  sku_name            = "Standard"
  tags = {
    "KubernetesCluster" = "test-cluster.k8s"
  }
}

resource "azurerm_nat_gateway_public_ip_association" "gossip-k8s-local-gossip-k8s-local" {
  nat_gateway_id       = azurerm_nat_gateway.gossip-k8s-local.id
  public_ip_address_id = azurerm_public_ip.gossip-k8s-local.id
}

resource "azurerm_network_security_group" "gossip-k8s-local" {
  location            = "eastus"
  name                = "gossip.k8s.local"
  resource_group_name = azurerm_resource_group.gossip-k8s-local.name
  security_rule {
    access                                     = "Allow"
    destination_application_security_group_ids = [azurerm_application_security_group.control-plane-gossip-k8s-local.id, azurerm_application_security_group.nodes-gossip-k8s-local.id]
    destination_port_range                     = "22"
    direction                                  = "Inbound"
    name                                       = "AllowSSH"
    priority                                   = 100
    protocol                                   = "Tcp"
    source_address_prefixes                    = ["0.0.0.0/0"]
    source_port_range                          = "*"
  }
  security_rule {
    access                                     = "Allow"
    destination_application_security_group_ids = [azurerm_application_security_group.control-plane-gossip-k8s-local.id, azurerm_application_security_group.nodes-gossip-k8s-local.id]
    destination_port_range                     = "22"
    direction                                  = "Inbound"
    name                                       = "AllowSSH_v6"
    priority                                   = 101
    protocol                                   = "Tcp"
    source_address_prefixes                    = ["::/0"]
    source_port_range                          = "*"
  }
  security_rule {
    access                                     = "Allow"
    destination_application_security_group_ids = [azurerm_application_security_group.control-plane-gossip-k8s-local.id]
    destination_port_range                     = "443"
    direction                                  = "Inbound"
    name                                       = "AllowKubernetesAPI"
    priority                                   = 200
    protocol                                   = "Tcp"
    source_address_prefixes                    = ["0.0.0.0/0"]
    source_port_range                          = "*"
  }
  security_rule {
    access                                     = "Allow"
    destination_application_security_group_ids = [azurerm_application_security_group.control-plane-gossip-k8s-local.id]
    destination_port_range                     = "443"
    direction                                  = "Inbound"
    name                                       = "AllowKubernetesAPI_v6"
    priority                                   = 201
    protocol                                   = "Tcp"
    source_address_prefixes                    = ["::/0"]
    source_port_range                          = "*"
  }
  security_rule {
    access                                     = "Allow"
    destination_application_security_group_ids = [azurerm_application_security_group.control-plane-gossip-k8s-local.id]
    destination_port_range                     = "*"
    direction                                  = "Inbound"
    name                                       = "AllowControlPlaneToControlPlane"
    priority                                   = 1000
    protocol                                   = "*"
    source_application_security_group_ids      = [azurerm_application_security_group.control-plane-gossip-k8s-local.id]
    source_port_range                          = "*"
  }
  security_rule {
    access                                     = "Allow"
    destination_application_security_group_ids = [azurerm_application_security_group.nodes-gossip-k8s-local.id]
    destination_port_range                     = "*"
    direction                                  = "Inbound"
    name                                       = "AllowControlPlaneToNodes"
    priority                                   = 1001
    protocol                                   = "*"
    source_application_security_group_ids      = [azurerm_application_security_group.control-plane-gossip-k8s-local.id]
    source_port_range                          = "*"
  }
  security_rule {
    access                                     = "Allow"
    destination_application_security_group_ids = [azurerm_application_security_group.nodes-gossip-k8s-local.id]
    destination_port_range                     = "*"
    direction                                  = "Inbound"
    name                                       = "AllowNodesToNodes"
    priority                                   = 1002
    protocol                                   = "*"
    source_application_security_group_ids      = [azurerm_application_security_group.nodes-gossip-k8s-local.id]
    source_port_range                          = "*"
  }
  security_rule {
    access                                     = "Deny"
    destination_application_security_group_ids = [azurerm_application_security_group.control-plane-gossip-k8s-local.id]
    destination_port_range                     = "2380-2381"
    direction                                  = "Inbound"
    name                                       = "DenyNodesToEtcdManager"
    priority                                   = 1003
    protocol                                   = "Tcp"
    source_application_security_group_ids      = [azurerm_application_security_group.nodes-gossip-k8s-local.id]
    source_port_range                          = "*"
  }
  security_rule {
    access                                     = "Deny"
    destination_application_security_group_ids = [azurerm_application_security_group.control-plane-gossip-k8s-local.id]
    destination_port_range                     = "4000-4001"
    direction                                  = "Inbound"
    name                                       = "DenyNodesToEtcd"
    priority                                   = 1004
    protocol                                   = "Tcp"
    source_application_security_group_ids      = [azurerm_application_security_group.nodes-gossip-k8s-local.id]
    source_port_range                          = "*"
  }
  security_rule {
    access                                     = "Allow"
    destination_application_security_group_ids = [azurerm_application_security_group.control-plane-gossip-k8s-local.id]
    destination_port_range                     = "*"
    direction                                  = "Inbound"
    name                                       = "AllowNodesToControlPlane"
    priority                                   = 1005
    protocol                                   = "*"
    source_application_security_group_ids      = [azurerm_application_security_group.nodes-gossip-k8s-local.id]
    source_port_range                          = "*"
  }
  security_rule {
    access                                     = "Allow"
    destination_application_security_group_ids = [azurerm_application_security_group.control-plane-gossip-k8s-local.id]
    destination_port_range                     = "443"
    direction                                  = "Inbound"
    name                                       = "AllowNodesToKubernetesAPI"
    priority                                   = 2000
    protocol                                   = "Tcp"
    source_address_prefixes                    = ["0.0.0.0/0", azurerm_public_ip.gossip-k8s-local.ip_address]
    source_port_range                          = "*"
  }
  security_rule {
    access                                     = "Allow"
    destination_application_security_group_ids = [azurerm_application_security_group.control-plane-gossip-k8s-local.id]
    destination_port_range                     = "3988"
    direction                                  = "Inbound"
    name                                       = "AllowNodesToKopsController"
    priority                                   = 2001
    protocol                                   = "Tcp"
    source_address_prefixes                    = [azurerm_public_ip.gossip-k8s-local.ip_address]
    source_port_range                          = "*"
  }
  security_rule {
    access                     = "Allow"
    destination_address_prefix = "VirtualNetwork"
    destination_port_range     = "*"
    direction                  = "Inbound"
    name                       = "AllowAzureLoadBalancer"
    priority                   = 4000
    protocol                   = "*"
    source_address_prefix      = "AzureLoadBalancer"
    source_port_range          = "*"
  }
  security_rule {
    access                                     = "Deny"
    destination_application_security_group_ids = [azurerm_application_security_group.control-plane-gossip-k8s-local.id]
    destination_port_range                     = "*"
    direction                                  = "Inbound"
    name                                       = "DenyAllToControlPlane"
    priority                                   = 4001
    protocol                                   = "*"
    source_address_prefix                      = "*"
    source_port_range                          = "*"
  }
  security_rule {
    access                                     = "Deny"
    destination_application_security_group_ids = [azurerm_application_security_group.nodes-gossip-k8s-local.id]
    destination_port_range                     = "*"
    direction                                  = "Inbound"
    name                                       = "DenyAllToNodes"
    priority                                   = 4002
    protocol                                   = "*"
    source_address_prefix                      = "*"
    source_port_range                          = "*"
  }
  tags = {
    "KubernetesCluster" = "test-cluster.k8s"
  }
}

resource "azurerm_public_ip" "api-gossip-k8s-local" {
  allocation_method   = "Static"
  ip_version          = "IPv4"
  location            = "eastus"
  name                = "api-gossip.k8s.local"
  resource_group_name = azurerm_resource_group.gossip-k8s-local.name
  sku                 = "Standard"
  tags = {
    "KubernetesCluster" = "test-cluster.k8s"
  }
}

resource "azurerm_public_ip" "gossip-k8s-local" {
  allocation_method   = "Static"
  ip_version          = "IPv4"
  location            = "eastus"
  name                = "gossip.k8s.local"
  resource_group_name = azurerm_resource_group.gossip-k8s-local.name
  sku                 = "Standard"
  tags = {
    "KubernetesCluster" = "test-cluster.k8s"
  }
}

resource "azurerm_resource_group" "gossip-k8s-local" {
  location = "eastus"
  name     = "gossip.k8s.local"
  tags = {
    "KubernetesCluster" = "test-cluster.k8s"
  }
}

resource "azurerm_role_assignment" "control-plane-eastus-1-masters-gossip-k8s-local-blob" {
  principal_id                     = azurerm_linux_virtual_machine_scale_set.control-plane-eastus-1-masters-gossip-k8s-local.identity[0].principal_id
  role_definition_id               = "/subscriptions/sub-321/resourceGroups/resource-group-name/providers/Microsoft.Storage/storageAccounts/teststorage/providers/Microsoft.Authorization/roleDefinitions/ba92f5b4-2d11-453d-a403-e96b0029c9fe"
  scope                            = "/subscriptions/sub-321/resourceGroups/resource-group-name/providers/Microsoft.Storage/storageAccounts/teststorage"
  skip_service_principal_aad_check = true
}

resource "azurerm_role_assignment" "control-plane-eastus-1-masters-gossip-k8s-local-owner" {
  principal_id                     = azurerm_linux_virtual_machine_scale_set.control-plane-eastus-1-masters-gossip-k8s-local.identity[0].principal_id
  role_definition_id               = "/subscriptions/sub-123/resourceGroups/gossip.k8s.local/providers/Microsoft.Authorization/roleDefinitions/8e3af657-a8ff-443c-a75c-2fe8c4bcb635"
  scope                            = "/subscriptions/sub-123/resourceGroups/gossip.k8s.local"
  skip_service_principal_aad_check = true
}

resource "azurerm_route_table" "gossip-k8s-local" {
  location            = "eastus"
  name                = "gossip.k8s.local"
  resource_group_name = azurerm_resource_group.gossip-k8s-local.name
  tags = {
    "KubernetesCluster" = "test-cluster.k8s"
  }
}

resource "azurerm_storage_blob" "cluster-completed-spec" {
  name                   = "tests/gossip.k8s.local/cluster-completed.spec"
  provider               = azurerm.files
  source                 = "${path.module}/data/azurerm_storage_blob_cluster-completed.spec_source"
  storage_account_name   = "teststorage"
  storage_container_name = "testcontainer"
  type                   = "Block"
}

resource "azurerm_storage_blob" "etcd-cluster-spec-events" {
  name                   = "tests/gossip.k8s.local/backups/etcd/events/control/etcd-cluster-spec"
  provider               = azurerm.files
  source                 = "${path.module}/data/azurerm_storage_blob_etcd-cluster-spec-events_source"
  storage_account_name   = "teststorage"
  storage_container_name = "testcontainer"
  type                   = "Block"
}

resource "azurerm_storage_blob" "etcd-cluster-spec-main" {
  name                   = "tests/gossip.k8s.local/backups/etcd/main/control/etcd-cluster-spec"
  provider               = azurerm.files
  source                 = "${path.module}/data/azurerm_storage_blob_etcd-cluster-spec-main_source"
  storage_account_name   = "teststorage"
  storage_container_name = "testcontainer"
  type                   = "Block"
}

resource "azurerm_storage_blob" "gossip-k8s-local-addons-azure-cloud-config-addons-k8s-io-k8s-1-31" {
  name                   = "tests/gossip.k8s.local/addons/azure-cloud-config.addons.k8s.io/k8s-1.31.yaml"
  provider               = azurerm.files
  source                 = "${path.module}/data/azurerm_storage_blob_gossip.k8s.local-addons-azure-cloud-config.addons.k8s.io-k8s-1.31_source"
  storage_account_name   = "teststorage"
  storage_container_name = "testcontainer"
  type                   = "Block"
}

resource "azurerm_storage_blob" "gossip-k8s-local-addons-azure-cloud-controller-addons-k8s-io-k8s-1-31" {
  name                   = "tests/gossip.k8s.local/addons/azure-cloud-controller.addons.k8s.io/k8s-1.31.yaml"
  provider               = azurerm.files
  source                 = "${path.module}/data/azurerm_storage_blob_gossip.k8s.local-addons-azure-cloud-controller.addons.k8s.io-k8s-1.31_source"
  storage_account_name   = "teststorage"
  storage_container_name = "testcontainer"
  type                   = "Block"
}

resource "azurerm_storage_blob" "gossip-k8s-local-addons-azuredisk-csi-driver-addons-k8s-io-k8s-1-31" {
  name                   = "tests/gossip.k8s.local/addons/azuredisk-csi-driver.addons.k8s.io/k8s-1.31.yaml"
  provider               = azurerm.files
  source                 = "${path.module}/data/azurerm_storage_blob_gossip.k8s.local-addons-azuredisk-csi-driver.addons.k8s.io-k8s-1.31_source"
  storage_account_name   = "teststorage"
  storage_container_name = "testcontainer"
  type                   = "Block"
}

resource "azurerm_storage_blob" "gossip-k8s-local-addons-bootstrap" {
  name                   = "tests/gossip.k8s.local/addons/bootstrap-channel.yaml"
  provider               = azurerm.files
  source                 = "${path.module}/data/azurerm_storage_blob_gossip.k8s.local-addons-bootstrap_source"
  storage_account_name   = "teststorage"
  storage_container_name = "testcontainer"
  type                   = "Block"
}

resource "azurerm_storage_blob" "gossip-k8s-local-addons-coredns-addons-k8s-io-k8s-1-12" {
  name                   = "tests/gossip.k8s.local/addons/coredns.addons.k8s.io/k8s-1.12.yaml"
  provider               = azurerm.files
  source                 = "${path.module}/data/azurerm_storage_blob_gossip.k8s.local-addons-coredns.addons.k8s.io-k8s-1.12_source"
  storage_account_name   = "teststorage"
  storage_container_name = "testcontainer"
  type                   = "Block"
}

resource "azurerm_storage_blob" "gossip-k8s-local-addons-dns-controller-addons-k8s-io-k8s-1-12" {
  name                   = "tests/gossip.k8s.local/addons/dns-controller.addons.k8s.io/k8s-1.12.yaml"
  provider               = azurerm.files
  source                 = "${path.module}/data/azurerm_storage_blob_gossip.k8s.local-addons-dns-controller.addons.k8s.io-k8s-1.12_source"
  storage_account_name   = "teststorage"
  storage_container_name = "testcontainer"
  type                   = "Block"
}

resource "azurerm_storage_blob" "gossip-k8s-local-addons-kops-controller-addons-k8s-io-k8s-1-16" {
  name                   = "tests/gossip.k8s.local/addons/kops-controller.addons.k8s.io/k8s-1.16.yaml"
  provider               = azurerm.files
  source                 = "${path.module}/data/azurerm_storage_blob_gossip.k8s.local-addons-kops-controller.addons.k8s.io-k8s-1.16_source"
  storage_account_name   = "teststorage"
  storage_container_name = "testcontainer"
  type                   = "Block"
}

resource "azurerm_storage_blob" "gossip-k8s-local-addons-kubelet-api-rbac-addons-k8s-io-k8s-1-9" {
  name                   = "tests/gossip.k8s.local/addons/kubelet-api.rbac.addons.k8s.io/k8s-1.9.yaml"
  provider               = azurerm.files
  source                 = "${path.module}/data/azurerm_storage_blob_gossip.k8s.local-addons-kubelet-api.rbac.addons.k8s.io-k8s-1.9_source"
  storage_account_name   = "teststorage"
  storage_container_name = "testcontainer"
  type                   = "Block"
}

resource "azurerm_storage_blob" "gossip-k8s-local-addons-limit-range-addons-k8s-io" {
  name                   = "tests/gossip.k8s.local/addons/limit-range.addons.k8s.io/v1.5.0.yaml"
  provider               = azurerm.files
  source                 = "${path.module}/data/azurerm_storage_blob_gossip.k8s.local-addons-limit-range.addons.k8s.io_source"
  storage_account_name   = "teststorage"
  storage_container_name = "testcontainer"
  type                   = "Block"
}

resource "azurerm_storage_blob" "gossip-k8s-local-addons-storage-azure-addons-k8s-io-k8s-1-31" {
  name                   = "tests/gossip.k8s.local/addons/storage-azure.addons.k8s.io/k8s-1.31.yaml"
  provider               = azurerm.files
  source                 = "${path.module}/data/azurerm_storage_blob_gossip.k8s.local-addons-storage-azure.addons.k8s.io-k8s-1.31_source"
  storage_account_name   = "teststorage"
  storage_container_name = "testcontainer"
  type                   = "Block"
}

resource "azurerm_storage_blob" "kops-version-txt" {
  name                   = "tests/gossip.k8s.local/kops-version.txt"
  provider               = azurerm.files
  source                 = "${path.module}/data/azurerm_storage_blob_kops-version.txt_source"
  storage_account_name   = "teststorage"
  storage_container_name = "testcontainer"
  type                   = "Block"
}

resource "azurerm_storage_blob" "manifests-channels-kops-channels" {
  name                   = "tests/gossip.k8s.local/manifests/channels/kops-channels.yaml"
  provider               = azurerm.files
  source                 = "${path.module}/data/azurerm_storage_blob_manifests-channels-kops-channels_source"
  storage_account_name   = "teststorage"
  storage_container_name = "testcontainer"
  type                   = "Block"
}

resource "azurerm_storage_blob" "manifests-etcdmanager-events-control-plane-eastus-1" {
  name                   = "tests/gossip.k8s.local/manifests/etcd/events-control-plane-eastus-1.yaml"
  provider               = azurerm.files
  source                 = "${path.module}/data/azurerm_storage_blob_manifests-etcdmanager-events-control-plane-eastus-1_source"
  storage_account_name   = "teststorage"
  storage_container_name = "testcontainer"
  type                   = "Block"
}

resource "azurerm_storage_blob" "manifests-etcdmanager-main-control-plane-eastus-1" {
  name                   = "tests/gossip.k8s.local/manifests/etcd/main-control-plane-eastus-1.yaml"
  provider               = azurerm.files
  source                 = "${path.module}/data/azurerm_storage_blob_manifests-etcdmanager-main-control-plane-eastus-1_source"
  storage_account_name   = "teststorage"
  storage_container_name = "testcontainer"
  type                   = "Block"
}

resource "azurerm_storage_blob" "manifests-static-kube-apiserver-healthcheck" {
  name                   = "tests/gossip.k8s.local/manifests/static/kube-apiserver-healthcheck.yaml"
  provider               = azurerm.files
  source                 = "${path.module}/data/azurerm_storage_blob_manifests-static-kube-apiserver-healthcheck_source"
  storage_account_name   = "teststorage"
  storage_container_name = "testcontainer"
  type                   = "Block"
}

resource "azurerm_storage_blob" "nodeupconfig-control-plane-eastus-1" {
  name                   = "tests/gossip.k8s.local/igconfig/control-plane/control-plane-eastus-1/nodeupconfig.yaml"
  provider               = azurerm.files
  source                 = "${path.module}/data/azurerm_storage_blob_nodeupconfig-control-plane-eastus-1_source"
  storage_account_name   = "teststorage"
  storage_container_name = "testcontainer"
  type                   = "Block"
}

resource "azurerm_storage_blob" "nodeupconfig-nodes-eastus-1" {
  name                   = "tests/gossip.k8s.local/igconfig/node/nodes-eastus-1/nodeupconfig.yaml"
  provider               = azurerm.files
  source                 = "${path.module}/data/azurerm_storage_blob_nodeupconfig-nodes-eastus-1_source"
  storage_account_name   = "teststorage"
  storage_container_name = "testcontainer"
  type                   = "Block"
}

resource "azurerm_subnet" "gossip-k8s-local" {
  address_prefixes     = ["10.0.0.0/16"]
  name                 = "gossip.k8s.local"
  resource_group_name  = azurerm_resource_group.gossip-k8s-local.name
  virtual_network_name = azurerm_virtual_network.gossip-k8s-local.name
}

resource "azurerm_subnet_nat_gateway_association" "gossip-k8s-local-gossip-k8s-local-natgw" {
  nat_gateway_id = azurerm_nat_gateway.gossip-k8s-local.id
  subnet_id      = azurerm_subnet.gossip-k8s-local.id
}

resource "azurerm_subnet_network_security_group_association" "gossip-k8s-local-gossip-k8s-local-nsg" {
  network_security_group_id = azurerm_network_security_group.gossip-k8s-local.id
  subnet_id                 = azurerm_subnet.gossip-k8s-local.id
}

resource "azurerm_subnet_route_table_association" "gossip-k8s-local-gossip-k8s-local-rt" {
  route_table_id = azurerm_route_table.gossip-k8s-local.id
  subnet_id      = azurerm_subnet.gossip-k8s-local.id
}

resource "azurerm_virtual_network" "gossip-k8s-local" {
  address_space       = ["10.0.0.0/16"]
  location            = "eastus"
  name                = "gossip.k8s.local"
  resource_group_name = azurerm_resource_group.gossip-k8s-local.name
  tags = {
    "KubernetesCluster" = "test-cluster.k8s"
  }
}

terraform {
  required_version = ">= 0.15.0"
  required_providers {
    azurerm = {
      "configuration_aliases" = [azurerm.files]
      "source"                = "hashicorp/azurerm"
      "version"               = ">= 4.0.0"
    }
  }
}
